# ezq-controller-firmware

./: .gitignore  CMakeLists.txt  ezq-update-manifest.json  ezq_dashboard_revB.html  ezq_wifi_portal_v5.html  platformio.ini  sdkconfig.defaults
boards/: ezq-ctlr-b.json
docs/: AUTO_UPDATE.md  AUTO_UPDATE_TEST_CHECKLIST.md  HARDWARE_REFERENCE.md  PINOUT.md  STATE_MACHINE.md
docs/states/: ABORT_COOLDOWN.md  BLOWER_MODE.md  BOOT.md  FAULT.md  IGNITION_CYCLE.md  READY_IDLE.md  SLEEP_IDLE.md  UPDATE_FW.md  ezq_state_machine_v2.html
extra_scripts/: settings_fs.py
include/: control_runtime.h  debug_console.h  dev_config.h  ota_service.h  pinout.h  settings_defaults.h  unit_identity.h  update_manager.h  wifi_manager.h
legacy-code/include/: fan.h  (+9 more)
manifests/: EZQ-CTLR-B-units.json  ezq-update-manifest.template.json
partitions/: partition_4MB.csv
release/: ezq-update-manifest.json
settings/: cycle_profile.json  settings.json
src/: CMakeLists.txt  button_input.cpp  button_input.h  config_store.cpp  config_store.h  control_app.cpp  debug_console.cpp  idf_component.yml  main.cpp  ota_service.cpp  output_control.cpp  output_control.h  sensor_monitor.cpp  sensor_monitor.h  settings_defaults.cpp  unit_identity.cpp  update_manager.cpp  wifi_manager.cpp
src/state_machine/: state_handlers.h  state_machine.cpp  state_machine_types.h
src/state_machine/states/: abort_cooldown.cpp  blower_mode.cpp  boot.cpp  fault.cpp  ignition_cycle.cpp  ready_idle.cpp  sleep_idle.cpp  update_fw.cpp
utils/: ota_serial_console.py  ota_upload.py  prepare_release.py
web_ui/: index.html
(+11 files in other folders)
